k8s/manyfold/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: nfs-media
          persistentVolumeClaim:
            claimName: nfs-media
      containers:
        - name: manyfold
          image: ghcr.io/manyfold3d/manyfold:0.129.2@sha256:c90e33e9a1590e71f6baf162dc9d1d91e7ee93212d22522a2c99f495405b8bdc
          volumeMounts:
            - name: nfs-media
              mountPath: /media
          ports:
            - name: http
              containerPort: 3214
