k8s/manyfold/resources/valkey.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey-deployment
  labels: &labels
    app.kubernetes.io/component: valkey
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: valkey
          image: docker.io/valkey/valkey:8.0@sha256:be3ec31522722ca5b7184c5537466d1838b28a7876f0c09a92899e4bf34a0590
          resources:
            limits:
              memory: 1G
          ports:
            - name: valkey
              containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: valkey-service
spec:
  selector:
    app.kubernetes.io/component: valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: valkey
